Wed Mar 28 18:52:34 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * ChangeLog:
        * docs/history/ChangeLog-3.1:

          Moved version 3.1 ChangeLog entries to a separate file.

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: